refactor(ProductsPage): simplify XAML structure by removing unnecessary Background attribute
- Removed the Background attribute from the ProductsPage.xaml to streamline the XAML structure.
- This change enhances readability and maintains the default background behavior.

--- a/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
@@ -10,8 +10,7 @@
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:primitives="using:CommunityToolkit.WinUI.UI.Controls.Primitives"
     mc:Ignorable="d"
-    x:Name="page"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    x:Name="page">
 
     <Page.Resources>
         <local:DecimalToDoubleConverter x:Key="DecimalToDoubleConverter"/>
