--- a/StormPC/StormPC/Views/Orders/OrderDetailPage.xaml
+++ b/StormPC/StormPC/Views/Orders/OrderDetailPage.xaml
@@ -10,10 +10,10 @@
 
     <Page.Resources>
         <Style x:Key="PageHeaderStyle" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="28"/>
+            <Setter Property="FontSize" Value="32"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
             <Setter Property="Margin" Value="0,0,0,24"/>
-            <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}"/>
+            <Setter Property="Foreground" Value="#0168EF"/>
         </Style>
         
         <Style x:Key="SectionHeaderStyle" TargetType="TextBlock">
