--- a/StormPC/StormPC/Views/BaseData/CategoriesPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/CategoriesPage.xaml
@@ -16,9 +16,9 @@
         <Style x:Key="PageTitleStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="32"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Margin" Value="20"/>
+            <Setter Property="Margin" Value="0,0,0,24"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}"/>
+            <Setter Property="Foreground" Value="#0168EF"/>
         </Style>
 
         <Style x:Key="ActionButtonStyle" TargetType="Button" BasedOn="{StaticResource AccentButtonStyle}">
