--- a/StormPC/StormPC/Views/Shell/ShellPage.xaml
+++ b/StormPC/StormPC/Views/Shell/ShellPage.xaml
@@ -9,6 +9,16 @@
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     Loaded="OnLoaded">
 
+    <Page.Resources>
+        <Style x:Key="PageTitleStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="32"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Margin" Value="0,0,0,24"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Foreground" Value="#0168EF"/>
+        </Style>
+    </Page.Resources>
+
     <Grid>
         <Grid x:Name="AppTitleBar"
               Canvas.ZIndex="1"
