--- a/StormPC/StormPC/Views/Settings/SettingsPage.xaml
+++ b/StormPC/StormPC/Views/Settings/SettingsPage.xaml
@@ -14,9 +14,9 @@
         <Style x:Key="PageTitleStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="32"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Margin" Value="20"/>
+            <Setter Property="Margin" Value="0,20,0,20"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Foreground" Value="#0168EF"/>
         </Style>
         
         <Style x:Key="SectionTitleStyle" TargetType="TextBlock">
