--- a/StormPC/StormPC/Views/Login/FirstTimeWindow.xaml
+++ b/StormPC/StormPC/Views/Login/FirstTimeWindow.xaml
@@ -57,25 +57,25 @@
                                  FontWeight="Bold"
                                  Foreground="#0168EF"
                                  HorizontalAlignment="Center"/>
-                        <TextBlock Text="Create Admin Account"
+                        <TextBlock Text="Tạo tài khoản quản trị"
                                  FontSize="16"
                                  Margin="0,10,0,0"
                                  HorizontalAlignment="Center"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="2" Margin="0,20">
-                        <TextBlock Text="Username" Margin="0,0,0,5"/>
+                        <TextBlock Text="Tên tài khoản" Margin="0,0,0,5"/>
                         <winui:TextBox x:Name="UsernameTextBox" 
                                  Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
                                  Margin="0,0,0,15"
                                  Padding="8"/>
 
-                        <TextBlock Text="Password" Margin="0,0,0,5"/>
+                        <TextBlock Text="Mật khẩu" Margin="0,0,0,5"/>
                         <winui:PasswordBox x:Name="PasswordBox"
                                     Margin="0,0,0,15"
                                     Padding="8"/>
 
-                        <TextBlock Text="Confirm Password" Margin="0,0,0,5"/>
+                        <TextBlock Text="Xác nhận mật khẩu" Margin="0,0,0,5"/>
                         <winui:PasswordBox x:Name="ConfirmPasswordBox"
                                     Margin="0,0,0,15"
                                     Padding="8"/>
@@ -87,7 +87,7 @@
                     </StackPanel>
 
                     <Button Grid.Row="3"
-                            Content="Create Admin Account"
+                            Content="Tạo tài khoản quản trị"
                             Style="{StaticResource AccentButtonStyle}" 
                             HorizontalAlignment="Center"
                             Width="250"
