--- a/StormPC/StormPC/Views/Dashboard/CustomerReportPage.xaml
+++ b/StormPC/StormPC/Views/Dashboard/CustomerReportPage.xaml
@@ -63,7 +63,7 @@
                          AcceptsReturn="True"
                          Height="80"/>
                 <ComboBox Header="Thành phố"
-                          ItemsSource="{Binding Cities}"
+                          ItemsSource="{Binding Cities, Mode=OneWay}"
                           SelectedItem="{Binding SelectedCity, Mode=TwoWay}"
                           DisplayMemberPath="CityName"
                           PlaceholderText="Chọn thành phố"
@@ -104,7 +104,7 @@
                              VerticalAlignment="Center"/>
                     <CalendarDatePicker Date="{x:Bind ViewModel.EndDate, Mode=TwoWay, Converter={StaticResource DateTimeConverter}}"
                                      MinWidth="100"/>
-                    <Button Command="{x:Bind ViewModel.RefreshCommand}">
+                    <Button Command="{x:Bind ViewModel.RefreshCommand, Mode=OneWay}">
                         <StackPanel Orientation="Horizontal" Spacing="8">
                             <FontIcon Glyph="&#xE72C;"/>
                             <TextBlock Text="Làm mới"/>
@@ -220,6 +220,7 @@
                              Style="{ThemeResource SubtitleTextBlockStyle}"
                              Margin="0,0,0,8"/>
                     <lvc:CartesianChart Grid.Row="1"
+                                     x:Name="PurchaseTrendsChart"
                                      Series="{x:Bind ViewModel.PurchaseTrendsSeries, Mode=OneWay}"
                                      XAxes="{x:Bind ViewModel.XAxes, Mode=OneWay}"
                                      YAxes="{x:Bind ViewModel.YAxes, Mode=OneWay}"
@@ -279,18 +280,18 @@
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
                                     <StackPanel>
-                                        <TextBlock Text="{x:Bind CustomerName}"
+                                        <TextBlock Text="{x:Bind CustomerName, Mode=OneWay}"
                                                  Style="{ThemeResource BodyStrongTextBlockStyle}"/>
                                         <TextBlock>
-                                            <Run Text="{x:Bind TotalOrders}"/>
+                                            <Run Text="{x:Bind TotalOrders, Mode=OneWay}"/>
                                             <Run Text=" đơn hàng - "/>
-                                            <Run Text="{x:Bind TotalSpent, Converter={StaticResource CurrencyConverter}}"/>
+                                            <Run Text="{x:Bind TotalSpent, Mode=OneWay, Converter={StaticResource CurrencyConverter}}"/>
                                             <Run Text=" đ"/>
                                         </TextBlock>
                                     </StackPanel>
                                     <TextBlock Grid.Column="1"
                                              VerticalAlignment="Center">
-                                        <Run Text="{x:Bind AverageOrderValue, Converter={StaticResource CurrencyConverter}}"/>
+                                        <Run Text="{x:Bind AverageOrderValue, Mode=OneWay, Converter={StaticResource CurrencyConverter}}"/>
                                         <Run Text=" đ/đơn"/>
                                     </TextBlock>
                                 </Grid>
@@ -353,7 +354,7 @@
                                  Sorting="DataGrid_Sorting">
                     <controls:DataGrid.Columns>
                         <controls:DataGridTextColumn Header="ID" 
-                                                   Binding="{Binding CustomerID}" 
+                                                   Binding="{Binding CustomerID, Mode=OneWay}" 
                                                    Tag="CustomerID"
                                                    Width="80">
                             <controls:DataGridTextColumn.HeaderStyle>
@@ -361,7 +362,7 @@
                             </controls:DataGridTextColumn.HeaderStyle>
                         </controls:DataGridTextColumn>
                         <controls:DataGridTextColumn Header="Họ tên" 
-                                                   Binding="{Binding FullName}" 
+                                                   Binding="{Binding FullName, Mode=OneWay}" 
                                                    Tag="FullName"
                                                    Width="200">
                             <controls:DataGridTextColumn.ElementStyle>
@@ -372,7 +373,7 @@
                             </controls:DataGridTextColumn.HeaderStyle>
                         </controls:DataGridTextColumn>
                         <controls:DataGridTextColumn Header="Email" 
-                                                   Binding="{Binding Email}" 
+                                                   Binding="{Binding Email, Mode=OneWay}" 
                                                    Tag="Email"
                                                    Width="200">
                             <controls:DataGridTextColumn.ElementStyle>
@@ -383,7 +384,7 @@
                             </controls:DataGridTextColumn.HeaderStyle>
                         </controls:DataGridTextColumn>
                         <controls:DataGridTextColumn Header="Số điện thoại" 
-                                                   Binding="{Binding Phone}" 
+                                                   Binding="{Binding Phone, Mode=OneWay}" 
                                                    Tag="Phone"
                                                    Width="120">
                             <controls:DataGridTextColumn.HeaderStyle>
@@ -391,7 +392,7 @@
                             </controls:DataGridTextColumn.HeaderStyle>
                         </controls:DataGridTextColumn>
                         <controls:DataGridTextColumn Header="Địa chỉ" 
-                                                   Binding="{Binding Address}" 
+                                                   Binding="{Binding Address, Mode=OneWay}" 
                                                    Tag="Address"
                                                    Width="*">
                             <controls:DataGridTextColumn.ElementStyle>
@@ -402,7 +403,7 @@
                             </controls:DataGridTextColumn.HeaderStyle>
                         </controls:DataGridTextColumn>
                         <controls:DataGridTextColumn Header="Thành phố" 
-                                                   Binding="{Binding CityName}" 
+                                                   Binding="{Binding CityName, Mode=OneWay}" 
                                                    Tag="CityName"
                                                    Width="150">
                             <controls:DataGridTextColumn.HeaderStyle>
